refactor: Replace URL instantiation with URI.create in IngressRoutingTest